2011-03-22  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSObject.m (-methodSignatureForSelector:): Get method
	right again in case the method is called on a class object and the
	old runtime is used.

2011-03-21 Riccardo Mottola <rm@gnu.org>

	* Tests/base/NSNumberFormatter/basic.m:
	Added new test.

2011-03-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/GNUmakefile (CODING-STANDARDS_TEXI_FILES,
	CODING-STANDARDS_DOC_INSTALL_DIR, CODING-STANDARDS_TEXT_MAIN):
	Removed.
	(DOCUMENT_TEXT_NAME, TOP_DOC_FILES): Fixed names of files to
	generate; for example, INSTALL instead of install.

2011-03-18 Riccardo Mottola <rm@gnu.org>

	* Source/NSSortDescriptor.m:
	Use Cocoa values for the coding keys.

2011-03-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSObjCRuntime.m: Use old API to work around bug in
	current sel_registerTypedName().
	* Source/GSFFIInvocation.m: Use sel_getTypedName() to safely get a
	typed selector.

2011-03-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSProcessInfo.m (_gnu_process_args): Use C runtime system
	functions to access command line arguments and the environment
	under Darwin/Mac OS X.

	* configure.ac: Add special case to disable fake-main by default
	on Darwin/OS X.

	* configure: Regenerated.

2011-03-17 15:02  David Chisnall <theraven@gna.org>

	* libs/base/trunk/Source/NSObject.m: Correctly call C++
	  constructors / destructors for C++ 'objects' in ObjC++ ivars.

2011-03-16  Richard Frith-Macdonald <rfm@gnu.org>

	* NSTimeZones/NSTimeZones.tar: regenerated wityh latest zone info.
	* Tests/base/NSCalendarDate: Updated to use standardised locale

2011-03-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Make +initialize thread safety warning optional
	(disabled using GSSilenceInitializeWarning user default) and more
	informative.

2011-03-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumberFormatter.m: Padding for fractional part comes at the